// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorListStatusColumn can handle a non-numeric timestamp value 1`] = `
<div>
  <Styled(EuiFlexGroup)
    alignItems="center"
    gutterSize="none"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      grow={false}
      style={
        Object {
          "flexBasis": 40,
        }
      }
    >
      <EuiBadge
        className="eui-textCenter"
        color="secondary"
      >
        Up
      </EuiBadge>
    </EuiFlexItem>
  </Styled(EuiFlexGroup)>
  <EuiSpacer
    size="xs"
  />
  <EuiText
    size="xs"
  >
    <EuiToolTip
      content={
        <EuiText
          color="ghost"
          size="xs"
        >
          
        </EuiText>
      }
      delay="regular"
      position="top"
    >
      <EuiText
        className="eui-textNoWrap"
        color="subdued"
        size="xs"
        style={
          Object {
            "paddingRight": 5,
          }
        }
      >
        in 0/0 location
        ,
      </EuiText>
    </EuiToolTip>
    <EuiToolTip
      content={
        <EuiText
          color="ghost"
          size="xs"
        >
          Thu May 09 2019 10:15:11 GMT-0400
        </EuiText>
      }
      delay="regular"
      position="top"
    >
      <EuiText
        className="eui-textNoWrap"
        color="subdued"
        size="xs"
      >
        Checked 
        Dec 31, 2018 7:00:00 PM
      </EuiText>
    </EuiToolTip>
  </EuiText>
</div>
`;

exports[`MonitorListStatusColumn provides expected tooltip and display times 1`] = `
<div>
  <Styled(EuiFlexGroup)
    alignItems="center"
    gutterSize="none"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      grow={false}
      style={
        Object {
          "flexBasis": 40,
        }
      }
    >
      <EuiBadge
        className="eui-textCenter"
        color="secondary"
      >
        Up
      </EuiBadge>
    </EuiFlexItem>
  </Styled(EuiFlexGroup)>
  <EuiSpacer
    size="xs"
  />
  <EuiText
    size="xs"
  >
    <EuiToolTip
      content={
        <EuiText
          color="ghost"
          size="xs"
        >
          
        </EuiText>
      }
      delay="regular"
      position="top"
    >
      <EuiText
        className="eui-textNoWrap"
        color="subdued"
        size="xs"
        style={
          Object {
            "paddingRight": 5,
          }
        }
      >
        in 0/0 location
        ,
      </EuiText>
    </EuiToolTip>
    <EuiToolTip
      content={
        <EuiText
          color="ghost"
          size="xs"
        >
          Thu May 09 2019 10:15:11 GMT-0400
        </EuiText>
      }
      delay="regular"
      position="top"
    >
      <EuiText
        className="eui-textNoWrap"
        color="subdued"
        size="xs"
      >
        Checked 
        Dec 31, 1969 7:38:34 PM
      </EuiText>
    </EuiToolTip>
  </EuiText>
</div>
`;

exports[`MonitorListStatusColumn will display location status 1`] = `
<div>
  <Styled(EuiFlexGroup)
    alignItems="center"
    gutterSize="none"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      grow={false}
      style={
        Object {
          "flexBasis": 40,
        }
      }
    >
      <EuiBadge
        className="eui-textCenter"
        color="secondary"
      >
        Up
      </EuiBadge>
    </EuiFlexItem>
  </Styled(EuiFlexGroup)>
  <EuiSpacer
    size="xs"
  />
  <EuiText
    size="xs"
  >
    <EuiToolTip
      content={
        <EuiText
          color="ghost"
          size="xs"
        >
          Up in BerlinDown in Islamabad, st-paul
        </EuiText>
      }
      delay="regular"
      position="top"
    >
      <EuiText
        className="eui-textNoWrap"
        color="subdued"
        size="xs"
        style={
          Object {
            "paddingRight": 5,
          }
        }
      >
        in 1/3 locations
        ,
      </EuiText>
    </EuiToolTip>
    <EuiToolTip
      content={
        <EuiText
          color="ghost"
          size="xs"
        >
          Thu May 09 2019 10:15:11 GMT-0400
        </EuiText>
      }
      delay="regular"
      position="top"
    >
      <EuiText
        className="eui-textNoWrap"
        color="subdued"
        size="xs"
      >
        Checked 
        Dec 31, 2018 7:00:00 PM
      </EuiText>
    </EuiToolTip>
  </EuiText>
</div>
`;

exports[`MonitorListStatusColumn will render display location status 1`] = `
@media (max-width:574px) {
  .c0 {
    min-width: 230px;
  }
}

<div>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow c0"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="flex-basis:40px"
    >
      <span
        class="euiBadge euiBadge--iconLeft eui-textCenter"
        style="background-color:#6dccb1;color:#000"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Up
          </span>
        </span>
      </span>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--xs"
  />
  <div
    class="euiText euiText--extraSmall"
  >
    <span
      class="euiToolTipAnchor"
    >
      <div
        class="euiText euiText--extraSmall eui-textNoWrap"
        style="padding-right:5px"
      >
        <div
          class="euiTextColor euiTextColor--subdued"
        >
          in 1/3 locations,
        </div>
      </div>
    </span>
    <span
      class="euiToolTipAnchor"
    >
      <div
        class="euiText euiText--extraSmall eui-textNoWrap"
      >
        <div
          class="euiTextColor euiTextColor--subdued"
        >
          Checked Dec 31, 2018 7:00:00 PM
        </div>
      </div>
    </span>
  </div>
</div>
`;
